# cde_mapper

./: .gitignore  README.md  checking.ipynb  note.txt  preprocess_vocabularies.ipynb  prompts.txt  pyproject.toml  requirements 2.txt  requirements.txt  run 2.py  run.py  variables.db
data/: mapping_examples.json
data/input/: mapping_templates.json
evaluation/: CDE_hfstudies_eval.py  QD_eval.py  Untitled.rtf  eval_metrics.py  significan_test.py
evaluation/visualize_experiment/: analyze_datasets.ipynb  data_view.ipynb  visualize_eval.ipynb
rag/: __init__.py  athena_api_retriever.py  bi_encoder.py  code_generator.py  combiner.py  compress.py  data_loader.py  embeddingfilter.py  ensemble_cretriever.py  eval.py  evalmap.py  generate_embeddings.py  indexer.py  llm_chain.py  manager.py  param.py  preprocess_data.py  py_model.py  retriever.py  retriever_wodb.py  sql.py  utils.py  vector_index.py
src/: __init__.py  athena_api_retriever.py  backup_code.py  bi_encoder.py  censemble.py  data_loader.py  database.py  dense_vectorstore.py  eval.py  generate_embeddings.py  graph_omop.py  indexer.py  llm_chain.py  manager_llm.py  param.py  preprocess_data.py  qdrant.py  retriever_.py  run_main.py  utils.py
src/miscellaneous/: vector_index.py  vector_search.py  vector_store.ipynb
src/rag/: __init__.py  bi_encoder.py  code_generator.py  data_loader.py  eval.py  generate_embeddings.py  graph_omop.py  llm_chain.py  manager.py  param.py  preprocess_data.py  py_model.py  sql.py  (+5 more)
visualize_experiment/: analyze_datasets.ipynb  data_view.ipynb  extract_eval.py  visualize_eval.ipynb
(+907 files in other folders)
